[package]
name = "normal"
version = "0.1.0"
authors = ["Joshua Blew <joshua@normalfinance.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.0.0"
# Band Protocol (https://docs.bandchain.org/develop/custom-scripts/oracle-script/tutorial)
owasm-kit = { version = "0.1.13" }
obi = { version = "0.0.2" }

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
